--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "axios": "^1.7.9",
+    "formik": "^2.4.6",
     "next": "15.1.6",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
